--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
 	<listener>
 		<listener-class>com.topspace.core.framework.listener.ApplicationStart</listener-class>
 	</listener>
+	
+	<listener>
+		<listener-class>com.topspace.core.framework.session.SessionListener</listener-class>
+	</listener>
   
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
